--- a/pagina2.css
+++ b/pagina2.css
@@ -24,7 +24,7 @@ body {
     font-size: 16px; 
     padding: 10px; 
     background-color: rgb(10, 10, 77); 
-    color: #969696; 
+    color: #ffffff; 
     border: none;
     border-radius: 20px;
 margin-top: 5%;
